# binance-future2

./: .env  async_test.py  binance_bot_class.py  main.py  py_bi_test.ipynb  pyproject.toml  semi_auto_long.py
classes/: chart_data_manager.py  shared_data.py
